fix: panel gap in transfer

--- a/src/components/Wallet/Transfer/Transfer.module.scss
+++ b/src/components/Wallet/Transfer/Transfer.module.scss
@@ -8,7 +8,7 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 17px;
     overflow-y: hidden;
     height: 100%;
 
